# libudi-rs

./: .gitignore  Cargo.toml  README.md  build_rtl8139.sh
.cargo/: config.toml
examples/test/: driver.rs  main.rs
samples/net_ne2000/: Cargo.toml  build.rs  udiprops.txt
samples/net_ne2000/src/: lib.rs  pio_ops.rs
samples/net_rtl8139/: Cargo.toml  udiprops.txt
samples/net_rtl8139/src/: lib.rs  pio_ops.rs
samples/udi_env/: Cargo.toml  build.rs  c_shim.c
samples/udi_env/src/: bridge_pci.rs  channels.rs  emulated_devices.rs  lib.rs  main.rs  management_agent.rs  sink_gio_serial.rs  sink_nsr.rs
samples/udi_env/src/emulated_devices/: helpers.rs  rtl8029.rs  rtl8139.rs  xt_serial.rs
samples/udi_env/src/udi_impl/: buf.rs  cb.rs  imc.rs  layout.rs  libc.rs  log.rs  meta_bus.rs  meta_gio.rs  meta_intr.rs  meta_mgmt.rs  meta_nic.rs  mod.rs  physio.rs  pio.rs
samples/udi_env/src/udi_impl/physio/: dma.rs  dma_constraints.rs
samples/udi_env/tests/: snprintf.rs  trace.rs
src/: async_helpers.rs  async_trickery.rs  buf.rs  cb.rs  channel_context.rs  error.rs  ffi.rs  future_ext.rs  imc.rs  init.rs  layout.rs  lib.rs  libc.rs  log.rs  mem.rs  meta_bridge.rs  meta_bus.rs  meta_gio.rs  meta_intr.rs  meta_mgmt.rs  meta_nic.rs  metalang_trait.rs  pio.rs
src/ffi/: attr.rs  buf.rs  cb.rs  imc.rs  init.rs  libc.rs  meta_bus.rs  meta_gio.rs  meta_intr.rs  meta_mgmt.rs  mod.rs  physio.rs  pio.rs
src/physio/: dma.rs
tools/create_so/: create_so.sh  create_so_retain.txt  create_so_rust.sh  libudi.ld  link.ld
tools/fix_elf/: Cargo.toml  main.rs
udi/: Cargo.toml
udi-sys/: Cargo.toml
udi-sys/src/: attr.rs  buf.rs  cb.rs  endian.rs  imc.rs  init.rs  layout.rs  lib.rs  libc.rs  log.rs  mei.rs  mem.rs  meta_bridge.rs  meta_bus.rs  meta_gfx.rs  meta_gio.rs  meta_intr.rs  meta_nic.rs  meta_scsi.rs  meta_usb.rs  physio.rs  pio.rs  queue.rs  time.rs
udi/src/: async_helpers.rs  async_trickery.rs  buf.rs  cb.rs  channel_context.rs  error.rs  future_ext.rs  imc.rs  init.rs  layout.rs  lib.rs  libc.rs  log.rs  mem.rs  meta_bridge.rs  meta_gio.rs  meta_mgmt.rs  meta_nic.rs  meta_scsi.rs  metalang_trait.rs  physio.rs  pio.rs
udi/src/cb/: collections.rs
udi/src/physio/: dma.rs
udi/tests/: layout.rs
udi_layout_derive/: Cargo.toml
udi_layout_derive/src/: lib.rs
udi_macro_helpers/: Cargo.toml
udi_macro_helpers/src/: printf.rs
udi_macros/: Cargo.toml
udi_macros/src/: derive_getlayout.rs  lib.rs  log.rs  printf.rs  udiprops.rs
udi_udiprops_parse/: Cargo.toml
udi_udiprops_parse/src/: lib.rs  parsed.rs
udiprops_parse/: Cargo.toml
udiprops_parse/src/: lib.rs  parsed.rs
