[package]
name = "udi"
version = "0.1.0"
edition = "2021"

[dependencies]
udi-sys = { path = "udi-sys" }
udi_macros = { path = "udi_macros" }

[workspace]
members = [
    ".",
    "udi-sys",
    "udiprops_parse",
    "udi_macros",
    "tools/fix_elf",
    "samples/udi_env",
    "samples/net_ne2000",
    "samples/net_rtl8139",
    ]