[package]
name = "udi"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
udi-sys = { path = "udi-sys" }
udi_macros = { path = "udi_macros" }
udiprops_parse = { path = "udiprops_parse" }

[workspace]
members = [
    ".",
    "udi-sys",
    "udiprops_parse",
    "udi_macros",
    "udi_macro_helpers",
    "tools/fix_elf",
    "samples/udi_env",
    "samples/net_ne2000",
    "samples/net_rtl8139",
    ]