[package]
name = "udi-environment"
version = "0.0.0"
edition = "2021"

[dependencies]
udi = { path = "../../" }
udi_macros = { path = "../../udi_macros" }
udiprops_parse = { path = "../../udiprops_parse" }
udi-net_ne2000 = { path = "../net_ne2000" }

libc = "0.2.149"

[build-dependencies]
cc = "1.0.83"
